# ai-ml-sdk-model-converter

./: .clang-format  .clang-tidy  .cmakelintrc  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  REUSE.toml  ai-ml-sdk-model-converter.spdx.json  conanfile.txt  pyproject.toml  requirements.txt  tooling-requirements.txt
.reuse/: dep5
cmake/: FindSphinx.cmake  argparse.cmake  doxygen.cmake  flatbuffers.cmake  json.cmake  llvm-project.cmake  package.cmake  sphinx.cmake  tosa-tools.cmake  tosa_mlir_translator.cmake  version.cmake  vgf-lib.cmake
cmake/toolchain/: gcc.cmake  gnu_compiler_options.cmake  linux-aarch64-gcc.cmake  linux-clang.cmake  linux-gcc.cmake  windows-msvc.cmake
docs/: Doxyfile  docs.cmake
docs/help/: model_converter_help.rst
docs/source/: building.rst  cloning.rst  conf.py  index.rst  license.rst  usage.rst  vkcustomshader-conversion.rst  vkshader-custom-op-encoding.rst
patches/: llvm.patch
pip_package/: pyproject.toml  setup.py  setup.py.template
pip_package/model_converter/: cli.py
schema/: vkshader-attributes-schema.json
scripts/: build.py
src/: compiler.cpp  compiler.hpp  main.cpp  opt.cpp  utils.cpp  utils.hpp  version.hpp.in  vgf_builder.hpp
src/conversion/: assign_grapharm_interface_var_abi.cpp  check_sparsity.cpp  dense_resource_inliner.cpp  model_partition_attrs.hpp  model_partition_marking.cpp  model_partitioning.cpp  resource_planner.cpp  resource_planner.hpp  serialize_vgf.cpp  signless_integer_marking.cpp  type_narrowing.cpp  verify_shaped_tensors.cpp  vgf_constants.cpp
src/include/: custom_op_domains.hpp  passes.hpp  passes.td  type_narrowing.hpp
src/vgf-dialect/: VGFDialect.cpp  VGFDialect.h  VGFDialect.td  VGFEnums.td  VGFOps.td
test/: conftest.py  model_converter_helpers.py  test_flatbuffer_loop_v100.py  test_model_converter_core_v100.py  test_model_converter_custom_v100.py  test_model_converter_graph_constants_v100.py  test_model_converter_resources_v100.py  test_model_converter_v100.py  test_type_narrowing_v100.py  vgf_decoder.py
test/json/: add.json  bf16.json  custom.json  custom_binding.json  custom_descriptor_set.json  custom_glsl.json  custom_hlsl.json  custom_image_sampler.json  custom_spirv.json  double_conv2d.json  double_custom.json  float8e4m3.json  float8e5m2.json  inlined_higher_rank_constant.json  rescale.json  rescale_input_signed.json
test/lit/: CMakeLists.txt  assign-grapharm-interface-var-abi.mlir  lit.cfg.py  lit.site.cfg.py.in  model-partition-marking-staged.mlir  model-partition-marking-vulkan-custom-trailing-graph-ops.mlir  model-partitioning-dependencies.mlir  model-partitioning-invalid.mlir  model-partitioning-multi-result-order.mlir  model-partitioning-multiple-functions.mlir  model-partitioning-rematerialize-constants.mlir  model-partitioning-segment-abi.mlir  signless-integer-marking.mlir  type-narrowing-fp32-to-fp16.mlir  type-narrowing-fp64-to-fp32.mlir  type-narrowing-int64-to-int32.mlir
test/mlir/: add.mlir  bf16.mlir  conv2d.mlir  custom.mlir  custom_binding.mlir  custom_descriptor_set.mlir  custom_glsl.mlir  custom_hlsl.mlir  custom_image_sampler.mlir  custom_spirv.mlir  double_conv2d.mlir  double_custom.mlir  float8e4m3.mlir  float8e5m2.mlir  inlined_higher_rank_constant.mlir  maxpool.mlir  rescale.mlir  rescale_input_signed.mlir
test/type_narrowing_testfiles/: abs.tosa-ir  abs_full.tosa-ir  abs_preserve_io.tosa-ir  add_f64.tosa-ir  add_f64_narrowed.mlir  add_i64.tosa-ir  add_i64_narrowed.mlir  avg_pool2d.tosa-ir  avg_pool2d_full.tosa-ir  avg_pool2d_partial.tosa-ir  avg_pool2d_preserve_io.tosa-ir  const_f64.tosa-ir  const_f64_narrowed.mlir  const_i64.tosa-ir  const_i64_narrowed.mlir  conv2d.tosa-ir  conv2d_full.tosa-ir  conv2d_partial.tosa-ir  conv2d_preserve_io.tosa-ir  depthwise_conv2d.tosa-ir  depthwise_conv2d_full.tosa-ir  depthwise_conv2d_partial.tosa-ir  depthwise_conv2d_preserve_io.tosa-ir
